source_set("ui") {
    sources = [
        "event.cpp",
        "platform.cpp",
        "view.cpp",
        "view_host.cpp",
    ]
    public = [
        "event.h",
        "platform.h",
        "view.h",
        "view_host.h",
        "window.h",
    ]
    deps = [
        "//source/spargel/base",
        "//source/spargel/render",
    ]

    if (is_macos) {
        sources += [
            "platform_mac.mm",
            "window_mac.mm",
        ]
        frameworks = [
            "AppKit.framework",
            # TODO: Move.
            "GameController.framework",
            "QuartzCore.framework",
        ]
    }
    if (is_windows) {
        sources += [
            "window_win32.cpp",
            "platform_win32.cpp",
        ]
    }
}

executable("demo_ui") {
    sources = [
        "demo_ui.cpp",
    ]
    deps = [
        ":ui",
        "//source/spargel/base",
        "//source/spargel/gpu",
        "//source/spargel/render",
        "//source/spargel/text",
    ]
}

executable("demo_window") {
    sources = [
        "window_demo.cpp",
    ]
    deps = [
        ":ui",
    ]
}