import("//gn/metal_library.gni")

executable("demo_sort") {
    sources = [ "demo_sort.cpp" ]
    deps = [
        "//source/spargel/base",
        "//source/spargel/gpu",
        "//source/spargel/resource",
    ]

    if (is_macos) {
        deps += [ ":metal_shaders" ]
    }
}

if (is_macos) {
    metal_library("metal_shaders") {
        sources = [
            "shader.metal",
        ]
        namespace = "spargel::gpu::demo"
        var_name = "METAL_SHADERS"
    }
}

